Fix deprecation warnings, update README, and more